# gfx

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindSDL2_ttf.cmake
docs/: Doxyfile.in
include/: font.h  graphics.h  mesh.h  shader.h  sprite.h  texture.h  window.h
libs/: CMakeLists.txt
libs/glad/include/glad/: gl.h
libs/glad/src/: gl.c
src/: font.cpp  graphics.cpp  mesh.cpp  shader.cpp  sprite.cpp  texture.cpp  window.cpp
